--- a/configuration.properties
+++ b/configuration.properties
@@ -1,1 +1,3 @@
-ORDS.URI=http://54.224.118.38:1000/ords/hr
+ORDS.URI=http://54.152.82.63:1000/ords/hr
+SPARTAN.URI=http://3.85.41.58:8000/api
+PRESCHOOL.URI = http://api.cybertektraining.com
